--- a/style.css
+++ b/style.css
@@ -106,7 +106,8 @@ hr{
 .author{
   display: flex;
   align-items: center;
-  padding-top: 10px;
+  padding-top: 15px;
+  padding-bottom: 10px;
 }
 
 .author img{
